# webscrape

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  pipeline_from_file.rs  pipeline_multithread.rs  pipeline_screenshot.rs  pipeline_simple.rs  proxies.rs  simple.rs
examples/config/: confluence_test.yaml  pipeline_file_1.yaml  pipeline_screenshot.yaml  stack_questions.yaml  stack_questions2.yaml
examples/files/: test1.html
src/: lib.rs  main.rs  pipeline.rs  proxy.rs  scraper.rs  test.rs  utils.rs
src/scraping/: chrome.rs  mod.rs  simple.rs
src/webscrape/: mod.rs  pipeline.rs  proxy.rs  scraper.rs
webscrape_py/: Cargo.toml  pyproject.toml
webscrape_py/src/: lib.rs  mycore.rs
