[package]
name = "webscrape"
version = "0.0.1"
edition = "2021"
authors = ["Mauro Sciancalepore <maurosciancalepore98@gmail.com>"]
description = "Web Scraping made easy."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
headless_chrome_fork = { version = "1", features = ["fetch"] }
#headless_chrome_fork = { path = "D:/Projects/git_forks/rust-headless-chrome", version = "*", features = ["fetch"] }

#scraper = "0.13.0"
serde = "1.0"
serde_yaml = "0.9.14"
serde_json = "1.0"
base64 = "0.13.1"
rand = "0.8.5"
tabled = "0.10.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rayon = "1.5"
sanitize-filename = "0.4.0"
env_logger = "0.7"
log = "0.4"

[lib]
name = "webscrape"
path = "src/lib.rs"
