[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
webscrape = { path = "../" }

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "proxies"
path = "proxies.rs"

[[example]]
name = "pipeline_simple"
path = "pipeline_simple.rs"

[[example]]
name = "pipeline_multithread"
path = "pipeline_multithread.rs"

[[example]]
name = "pipeline_screenshot"
path = "pipeline_screenshot.rs"